--- a/my-whats-app/src/app.html
+++ b/my-whats-app/src/app.html
@@ -21,5 +21,8 @@
 		font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+  background: #efe7dd
+			url('https://cloud.githubusercontent.com/assets/398893/15136779/4e765036-1639-11e6-9201-67e728e86f39.jpg')
+			repeat;
 	}
 </style>
